--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "fetch-jsonp": "^1.1.3",
-    "framer-motion": "^2.4.1",
+    "moment": "^2.27.0",
     "query-string": "^6.13.1",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
