--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "concurrently": "^5.3.0",
+    "local-cors-proxy": "^1.1.0",
     "moment": "^2.27.0",
     "query-string": "^6.13.1",
     "ramda": "^0.27.1",
@@ -24,10 +26,13 @@
     "uuid": "^8.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "scripts": "react-scripts start",
+    "start":"concurrently \"yarn proxy\" \"yarn scripts\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open",
+    "proxy": "lcp --proxyUrl https://www.flickr.com"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^5.0.0",
     "redux-saga-test-plan": "^4.0.0-rc.3"
   }
 }
