--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^5.3.0",
     "local-cors-proxy": "^1.1.0",
     "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "query-string": "^6.13.1",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "scripts": "react-scripts start",
-    "start":"concurrently \"yarn proxy\" \"yarn scripts\"",
+    "start": "concurrently \"yarn proxy\" \"yarn scripts\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
