--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "query-string": "^6.13.1",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
+    "react-content-loader": "^6.0.1",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "uuid": "^8.3.0"
   },
   "scripts": {
     "scripts": "react-scripts start",
-    "start":"concurrently \"yarn proxy\" \"yarn scripts\"",
+    "start": "concurrently \"yarn proxy\" \"yarn scripts\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
